Security: fix XSS in column manager, add CSP headers, harden Netlify functions
- Fix XSS (Finding 1): replace innerHTML template string in renderColumns()
  with explicit createElement/textContent/setAttribute calls in both
  web-desktop and web-mobile app.js. Column names, types, and dropdown
  options are user-controlled data and must not be interpolated into
  innerHTML. Drag handle, hide/show button, edit button, and delete button
  are all now built via DOM APIs.

- Add UUID validation (Finding 6): introduce isValidShareToken() in both
  app.js files; the share token from the URL is now validated against a
  UUID regex before being passed to the Supabase query in
  loadPublicShareState(). Non-UUID tokens are silently rejected.

- Add Content-Security-Policy and security headers (Finding 10): extend
  netlify.toml with X-Content-Type-Options, X-Frame-Options,
  Referrer-Policy, Permissions-Policy, and a CSP that pins allowed
  script/connect/img origins to the known set (self, jsDelivr, GTM,
  Supabase project, Google Analytics).

- Harden request-access.mjs (Finding 7): parse event.body once and reuse
  throughout; move honeypot check before field validation so bots are
  silently dismissed before any work is done; add MAX_NAME_LENGTH (200)
  and MAX_EMAIL_LENGTH (254) guards to prevent oversized payloads from
  reaching Supabase.

- Auth-guard backup.mjs for HTTP invocations (Finding 8): scheduled
  Netlify cron calls (no httpMethod) are always allowed; direct HTTP
  calls are rejected with 401 unless the x-backup-secret header matches
  the BACKUP_SECRET env var. Falls back gracefully when BACKUP_SECRET is
  not set (existing behavior preserved for deployments not yet configured).

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,27 @@
 [functions]
   directory = "netlify/functions"
+
+# Security headers applied to all routes
+[[headers]]
+  for = "/*"
+  [headers.values]
+    # Prevent browsers from MIME-sniffing away from the declared content type
+    X-Content-Type-Options = "nosniff"
+
+    # Prevent this app from being embedded in iframes on other origins
+    X-Frame-Options = "SAMEORIGIN"
+
+    # Stop legacy browsers sending the full Referer URL to third parties
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+    # Restrict browser features not used by this app
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+
+    # Content Security Policy
+    # - script-src: only self, jsDelivr (Supabase SDK), and Google Tag Manager
+    # - connect-src: self + Supabase project + Google Analytics
+    # - img-src: self, data URIs, blob URLs (photo previews), and Supabase storage
+    # - style-src: self + unsafe-inline (required by existing inline styles)
+    # - font-src: self (fonts are self-hosted)
+    # - frame-ancestors: prevents clickjacking from any origin
+    Content-Security-Policy = "default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://www.googletagmanager.com; connect-src 'self' https://jbmzsxbzqvgsasjhwuko.supabase.co https://www.google-analytics.com https://analytics.google.com https://region1.google-analytics.com; img-src 'self' data: blob: https://jbmzsxbzqvgsasjhwuko.supabase.co; style-src 'self' 'unsafe-inline'; font-src 'self' data:; frame-ancestors 'none'; form-action 'self';"
