--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shirt-tracker",
   "private": true,
-  "version": "0.1.0",
+  "version": "2.0.7",
   "type": "module",
   "scripts": {
     "build:web-root": "node scripts/build-web-root.mjs",
@@ -12,6 +12,7 @@
     "tauri": "TAURI_CONFIG=apps/desktop-tauri/src-tauri/tauri.conf.json tauri"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2"
+    "@tauri-apps/cli": "^2",
+    "esbuild": "^0.27.3"
   }
 }
